# jaxpr-viz

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/docs/: developers.md  gallery.md
.github/workflows/: pre-merge.yaml  run-tests.yaml
jpviz/: __init__.py  draw_dot.py
jpviz/dot/: __init__.py  graph.py  graph_utils.py  styling.py  utils.py
tests/: test_cases.py  test_utils.py
