[tool.poetry]
name = "jpviz"
version = "0.1.1"
description = "Jaxpr Visualisation Tool"
authors = []
readme = "README.md"
packages = [{include = "jpviz"}]
homepage = ""
repository = "https://github.com/zombie-einstein/jaxpr-viz"
keywords = ["JAX", "Computation Graph"]

[tool.poetry.dependencies]
python = "^3.9"
jax = "^0.4.14"
pydot = "^1.4.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
taskipy = "^1.12.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = { cmd = "pytest", help="Run tests"}
lint = { cmd = "pre-commit run --all-files", help="Code format checks"}
